--- a/Clustering_Pokemon.ipynb
+++ b/Clustering_Pokemon.ipynb
@@ -62,7 +62,7 @@
         "from sklearn.preprocessing import StandardScaler #scale data\n",
         "from sklearn.decomposition import PCA #PCA\n",
         "from sklearn.cluster import KMeans #clustering\n",
-        "from tabulate import tabulate"
+        "from tabulate import tabulate #tables"
       ]
     },
     {
@@ -734,7 +734,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 502
+          "height": 467
         },
         "id": "aD7IkFWUGtCi",
         "outputId": "100f268c-ca1b-4e09-afac-c29ef57f5e69"
@@ -1108,7 +1108,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 554
+          "height": 467
         },
         "id": "E3ZNpPolHF2y",
         "outputId": "a815833a-2071-4e32-e356-b1e9557adcc2"
@@ -1478,7 +1478,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
+          "height": 206
         },
         "id": "4jEThzD9mqea",
         "outputId": "88f7db30-4ad3-4da9-8ccc-45db0e2e1940"
@@ -1731,7 +1731,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 156
+          "height": 112
         },
         "id": "zYzTBkb58YPP",
         "outputId": "897dfe44-96df-48d3-feb0-123b726d01d1"
@@ -5444,7 +5444,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeOLONCh81Nvk1w5gYYHbh",
+      "authorship_tag": "ABX9TyNg/mjy4rGvQ06uiqvmArw6",
       "include_colab_link": true
     },
     "kernelspec": {
